# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import childrenRouter from "./children";
 import appsRouter from "./apps";
 import childAppStatusRouter from "./child-app-status";
 import exportRouter from "./export";
+import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(childrenRouter);
 router.use(appsRouter);
 router.use(childAppStatusRouter);
 router.use(exportRouter);
+router.use(dashboardRouter);
 
 export default router;
